# desk_phone_utility

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: docs-gh-pages.yml
docs/source/: conf.py  desk_phone_utility.rst  index.rst  modules.rst
src/desk_phone_utility/: __init__.py  cli.py  config.py  desk_phone_utility.py  gui.py
src/desk_phone_utility/data/: example_config.toml
tests/: __init__.py  test_desk_phone_utility.py
